<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.makuners.android.androidquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/welcome_line"
            style="@style/WelcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ready_to_show_text"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"/>
        <!--Dummy LinearLayout to avoid auto popup of cursor
        and keyboard on activity opening-->
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />
        <LinearLayout
            android:id="@+id/question_1_wrapper"
            style="@style/QuestionWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/QuestionTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1_title"/>
            <TextView
                android:id="@+id/question_1_body"
                style="@style/QuestionBodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1_body"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/question_1_answer_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="question1RadioButtons"
                    android:text="@string/question_1_answer_1"/>
                <RadioButton
                    android:id="@+id/question_1_answer_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="question1RadioButtons"
                    android:text="@string/question_1_answer_2"/>
                <RadioButton
                    android:id="@+id/question_1_answer_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="question1RadioButtons"
                    android:text="@string/question_1_answer_3"/>
            </RadioGroup>
        </LinearLayout>
        <View
        style="@style/Divider"
        android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <LinearLayout
            android:id="@+id/question_2_wrapper"
            style="@style/QuestionWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/QuestionTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_2_title"/>
            <TextView
                android:id="@+id/question_2_body"
                style="@style/QuestionBodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_2_body"/>
            <EditText
                android:id="@+id/question_2_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_2_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:windowSoftInputMode="stateHidden"/>
        </LinearLayout>
        <View
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
        <LinearLayout
            android:id="@+id/question_3_wrapper"
            style="@style/QuestionWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/QuestionTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3_title"/>
            <TextView
                android:id="@+id/question_3_body"
                style="@style/QuestionBodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3_body"/>
            <CheckBox
                android:id="@+id/question_3_answer_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3_answer_1" />
            <CheckBox
                android:id="@+id/question_3_answer_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3_answer_2" />
            <CheckBox
                android:id="@+id/question_3_answer_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3_answer_3" />
            <CheckBox
                android:id="@+id/question_3_answer_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3_answer_4" />
        </LinearLayout>
        <View
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
        <LinearLayout
            android:id="@+id/question_4_wrapper"
            style="@style/QuestionWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/QuestionTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_4_title"/>
            <TextView
                android:id="@+id/question_4_body"
                style="@style/QuestionBodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_4_body"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/question_4_answer_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="question4RadioButtons"
                    android:text="@string/question_4_answer_1"/>
                <RadioButton
                    android:id="@+id/question_4_answer_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="question4RadioButtons"
                    android:text="@string/question_4_answer_2"/>
                <RadioButton
                    android:id="@+id/question_4_answer_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="question4RadioButtons"
                    android:text="@string/question_4_answer_3"/>
            </RadioGroup>
        </LinearLayout>
        <View
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
        <LinearLayout
            android:id="@+id/question_5_wrapper"
            style="@style/QuestionWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/QuestionTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_5_title"/>
            <TextView
                android:id="@+id/question_5_body"
                style="@style/QuestionBodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/question_5_body"/>
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:paddingBottom="8dp"
               android:paddingTop="8dp">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                android:id="@+id/question_5_answer_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="question5RadioButtons" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingBottom="4dp"
                    android:paddingRight="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/robot" />
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray"/>
                <RadioButton
                android:id="@+id/question_5_answer_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="question5RadioButtons" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingBottom="4dp"
                    android:paddingRight="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/android_logo"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray"/>
                <RadioButton
                android:id="@+id/question_5_answer_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="question5RadioButtons" />
                <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                    android:paddingBottom="4dp"
                    android:paddingRight="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/smartphone"/>
            </RadioGroup>
           </RelativeLayout>
        </LinearLayout>
        <View
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
        <LinearLayout
            android:id="@+id/question_6_wrapper"
            style="@style/QuestionWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/QuestionTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_6_title"/>
            <TextView
                android:id="@+id/question_6_body"
                style="@style/QuestionBodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_6_body"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/question_6_answer_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="question6RadioButtons"
                    android:text="@string/question_6_answer_1"/>
                <RadioButton
                    android:id="@+id/question_6_answer_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="question6RadioButtons"
                    android:text="@string/question_6_answer_2"/>
                <RadioButton
                    android:id="@+id/question_6_answer_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="question6RadioButtons"
                    android:text="@string/question_6_answer_3"/>
            </RadioGroup>
        </LinearLayout>
        <View
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
        <TextView
            android:id="@+id/final_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="0"
            android:textSize="56sp"
            android:visibility="gone"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="calculateFinalScore"
            android:text="@string/calculate_my_score"/>
    </LinearLayout>
</ScrollView>
